syntax = 'proto3';

package thread;

option go_package = "github.com/habiliai/agentruntime/thread";

import "google/protobuf/timestamp.proto";

service ThreadManager {
  rpc CreateThread(CreateThreadRequest) returns (CreateThreadResponse);
  rpc GetThread(GetThreadRequest) returns (Thread);

  rpc AddMessage(AddMessageRequest) returns (AddMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (stream GetMessagesResponse);
  rpc GetNumMessages(GetNumMessagesRequest) returns (GetNumMessagesResponse);
}

message GetNumMessagesRequest {
  uint32 thread_id = 1;
}

message GetNumMessagesResponse {
  uint32 num_messages = 2;
}

message GetMessagesRequest {
  enum Order {
    OLDEST = 0;
    LATEST = 1;
  }
  uint32 thread_id = 1;
  Order order = 2;
  uint32 limit = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  message ToolCall {
    string name = 1;
    string arguments = 2;
    string result = 3;
  }
  uint32 id = 1;
  string content = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  string sender = 5;
  repeated ToolCall tool_calls = 6;
}

message AddMessageRequest {
  uint32 thread_id = 1;
  string sender = 3;
  string content = 4;
  repeated Message.ToolCall tool_calls = 5;
}

message AddMessageResponse {
  uint32 message_id = 1;
}

message CreateThreadRequest {
  string instruction = 1;
  map<string, string> metadata = 2;
}

message CreateThreadResponse {
  uint32 thread_id = 1;
}

message GetThreadRequest {
  uint32 thread_id = 1;
}

message Thread {
  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string instruction = 4;
  repeated string participants = 5;
}